# AI_LAB

./: README.md  pyproject.toml  run_checks.sh
glass_clasification/: glass.ipynb
labs/lab1/: solution.py  z1main.py
neural_net_tuning/: mlp_jokes.ipynb
reversi_minimax/: constants.py  examples.py  game.py  game_states.pickle  heuristics.py  minimax.py  one_answer.py  one_move.py  one_move_example.py  reporting.py  serialize_game_states.py  strategies.py  visualize_state.py
