[tool.poetry]
name = "ai-lab"
version = "0.1.0"
description = ""
authors = ["Szymon-SR <srszymonsr@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_lab"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
networkx = "^3.0"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
textual = "^0.23.0"
termcolor = "^2.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
